came up with a better way to handle space patters with protocols. now you can write much tigther furis for complex uri patterns in the native space implementation.